--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <form>
     	<input type="text" placeholde"first name">
-		<input type"submit" name="submit" value="Sign up">
+		<input type="submit" name="submit" value="Sign up">
     </form>
     <hr>
     <h2>Title 2</h2>
