--- a/index.html
+++ b/index.html
@@ -2,33 +2,71 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Justin Jackson</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="MegaMaker - the podcast for makers, DIYers, crafters, and creatives">
+<meta property="og:type" content="website" />
+<meta property="og:title" content="MegaMaker" />
+<meta property="og:description" content="the podcast for makers, DIYers, crafters, and creatives" />
+<meta property="og:url" content="http://megamaker.co/" />
+<meta property="og:site_name" content="MegaMaker" />
+<meta property="og:image" content="http://megamaker.co/img/common/megamaker-logo-3d.png" />
+<meta property="og:locale" content="en_US" />
+<title>MegaMaker</title>
+<link rel="alternate" type="application/rss+xml" title="MegaMaker RSS" href="http://simplecast.fm/podcasts/1376/rss" />
+<link rel="apple-touch-icon" sizes="57x57" href="/img/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/img/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/img/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/img/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/img/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/img/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/img/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/img/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/img/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+<link rel="manifest" href="/img/manifest.json">
+
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-<link href='https://fonts.googleapis.com/css?family=Cardo:400,400italic,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=IM+Fell+English:400,400italic' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 <div class="main">
 	<article>
-    <h1>Justin Jackson</h1>
-    <p>I was wondering if after all these hours You'd like to stop working, and go to sleep They say that sleep's supposed to heal ya But I ain't done much sleeping Hello, can you hear me? I'm in Canada dreaming about the naps that used to be When I was younger and free I've forgotten how it felt before the world fell at our feet There's such a difference between us And a million miles</p>
+    <img src="img/megamakerlogo.png" alt="MegaMaker - the podcast for makers, DIYers, crafters, and creatives" class="img-responsive">
+    <h2>Season 2: coming April 1st</h2>
+    <p>The show for artisans, DIYers, craftspeople, makers, and creatives.</p>
+    <p>Justin is trying to make 100 things in 2016. Will he do it? Each episode is a short, entertaining adventure on creating something new. You'll also hear how other makers are living a creating life while also making a living. Get motivated to make your own stuff this year!</p>
     <div class="one">
-    <h2>Option 1</h2>
-    <p>Hello</p>
-    <p align="center"><a href="#" class="button">Sign up</a>
+    <h2>Listen to the podcast</h2>
+    <p><a href="https://itunes.apple.com/us/podcast/megamaker/id1074661788">Subscribe on iTunes</a></p>
+    <p><a href="https://overcast.fm/itunes1074661788/megamaker">Listen with Overcast</a></p>
+    <p><a href="http://pca.st/kqkY">Listen wtih Pocket Casts</a></p>
+    <p><a href="http://megamaker.simplecast.fm/">Listen online</a></p>
+    <p><a href="http://simplecast.com/podcasts/1376/rss">Subscribe via RSS</a></p>
     </div>
     <div class="two">
-    <h2>Option 2</h2>
-    <p>Hello</p>
-    <p align="center"><a href="#" class="button">Sign up</a>
+    <h2>Join the Maker Challenge</h2>
+    <form id="ck_subscribe_form" action="https://app.convertkit.com/landing_pages/2659/subscribe" data-remote="true">
+          <fieldset>
+            <input type="hidden" name="id" value="2659" id="landing_page_id">
+            <label for="ck_firstNameField">First Name</label>
+            <input name="first_name" id="ck_firstNameField" type="text" placeholder="First Name">
+            <label for="ck_emailField">Your Email</label>
+            <input type="email" name="email" id="ck_emailField" placeholder="Your Email">
+            <button type="submit" id="ck_subscribe_button">Sign Up</button>
+          </fieldset>
+    </form>
     </div>
     <form>
     	<input type="text" placeholde"first name">
 		<input type="submit" name="submit" value="Sign up">
     </form>
     <hr>
-    <h2>Title 2</h2>
+    <h2>Reviews</h2>
     <blockquote>"The best ever"
     <footer>- <cite>Someone</cite></footer>
     </blockquote>
