Let's try Roboto

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <link rel="manifest" href="/img/manifest.json">
 
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-<link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -38,7 +38,7 @@
     <img src="img/megamakerlogo.png" alt="MegaMaker - the podcast for makers, DIYers, crafters, and creatives" class="img-responsive">
     <h2>Season 2: coming April 1st</h2>
     <p>The show for artisans, DIYers, craftspeople, makers, and creatives.</p>
-    <p>Justin is trying to make 100 things in 2016. Will he do it? Each episode is a short, entertaining adventure on creating something new. You'll also hear how other makers are living a creating life while also making a living. Get motivated to make your own stuff this year!</p>
+    <p>Justin is trying to make 100 things in 2016. Will he do it? Each episode is a short, entertaining adventure on creating something new. You'll also hear how other makers are living a creative life while also making a living. Get motivated to make your own stuff this year!</p>
     <div class="one">
     <h2>Listen to the podcast</h2>
     <p><a href="https://itunes.apple.com/us/podcast/megamaker/id1074661788">Subscribe on iTunes</a></p>
