--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <img src="img/megamakerlogo.png" alt="MegaMaker - the podcast for makers, DIYers, crafters, and creatives" class="img-responsive">
     <h2>Season 2: coming April 1st</h2>
     <p>The show for artisans, DIYers, craftspeople, makers, and creatives.</p>
-    <p>Justin is trying to make 100 things in 2016. Will he do it? Each episode is a short, entertaining adventure on creating something new. You'll also hear how other makers are living a creative life while also making a living. Get motivated to make your own stuff this year!</p>
+    <p>Justin is trying to <a href="http://megamaker.co/list">make 100 things</a> in 2016. Will he do it? Each episode is a short, entertaining adventure on creating something new. You'll also hear how other makers are living a creative life while also making a living. Get motivated to make your own stuff this year!</p>
     <div class="one">
     <h2>Listen to the podcast</h2>
     <p><a href="https://itunes.apple.com/us/podcast/megamaker/id1074661788">Subscribe on iTunes</a></p>
@@ -63,10 +63,8 @@
 
     <hr>
     <h2>Reviews</h2>
-    <blockquote>"The best ever"
-    <footer>- <cite>Someone</cite></footer>
-    </blockquote>
-    </article>
+    <p><img src="img/review-01.jpg" alt="Pure inspiration" class="img-responsive"></p>
+  </article>
 </div>
 </body>
 </html>
