--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     </div>
 
     <hr>
-    <h2>Reviews</h2>
-    <p><img src="img/review-01.jpg" alt="Pure inspiration" class="img-responsive"></p>
+    <h2 align="center">Reviews</h2>
+    <p><a href="http://beta.podrover.com/r/2531847529"><img src="img/review-01.jpg" alt="Pure inspiration" border="0" class="img-review"></a></p>
   </article>
 </div>
 </body>
