--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
 
     <hr>
     <h2 align="center">Reviews</h2>
+    <p><a href="http://beta.podrover.com/r/1398371103"><img src="img/review-03.jpg" alt="Get inspired" border="0" class="img-review"></a></p>
     <p><a href="http://beta.podrover.com/r/2531847529"><img src="img/review-01.jpg" alt="Pure inspiration" border="0" class="img-review"></a></p>
+    <p><a href="http://beta.podrover.com/r/665759879"><img src="img/review-02.jpg" alt="Recommended" border="0" class="img-review"></a></p>
   </article>
 </div>
 </body>
