--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h2>Listen to the podcast</h2>
     <p><a href="https://itunes.apple.com/us/podcast/megamaker/id1074661788">Subscribe on iTunes</a></p>
     <p><a href="https://overcast.fm/itunes1074661788/megamaker">Listen with Overcast</a></p>
-    <p><a href="http://pca.st/kqkY">Listen wtih Pocket Casts</a></p>
+    <p><a href="http://pca.st/kqkY">Listen with Pocket Casts</a></p>
     <p><a href="http://megamaker.simplecast.fm/">Listen online</a></p>
     <p><a href="http://simplecast.com/podcasts/1376/rss">Subscribe via RSS</a></p>
     </div>
@@ -67,6 +67,9 @@
     <p><a href="http://beta.podrover.com/r/2531847529"><img src="img/review-01.jpg" alt="Pure inspiration" border="0" class="img-review"></a></p>
     <p><a href="http://beta.podrover.com/r/665759879"><img src="img/review-02.jpg" alt="Recommended" border="0" class="img-review"></a></p>
   </article>
+  <div class="nav">
+    <a href="http://megamaker.co/secret">Secret Society</a> | <a href="http://live.megamaker.co">Live stream</a> | <a href="http://store.megamaker.co">Store</a>
+  </div>
 </div>
 </body>
 </html>
