Switched to the right convert kit form

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     </div>
     <div class="two">
     <h2>Join the Maker Challenge</h2>
-    <form id="ck_subscribe_form" action="https://app.convertkit.com/landing_pages/2659/subscribe" data-remote="true">
+    <form id="ck_subscribe_form" action="https://app.convertkit.com/landing_pages/12755/subscribe" data-remote="true">
           <fieldset>
-            <input type="hidden" name="id" value="2659" id="landing_page_id">
+            <input type="hidden" name="id" value="12755" id="landing_page_id">
             <label for="ck_firstNameField">First Name</label>
             <input name="first_name" id="ck_firstNameField" type="text" placeholder="First Name">
             <label for="ck_emailField">Your Email</label>
@@ -68,8 +68,7 @@
     <p><a href="http://beta.podrover.com/r/665759879"><img src="img/review-02.jpg" alt="Recommended" border="0" class="img-review"></a></p>
   </article>
   <div class="nav">
-    <a href="http://megamaker.co/secret">Secret Society</a> | <a href="http://live.megamaker.co">Live stream</a> | <a href="http://store.megamaker.co">Store</a>
-  </div>
+  <a href="http://megamaker.co/secret">Secret Society</a> | <a href="http://live.megamaker.co">Live stream</a> | <a href="http://store.megamaker.co">Store</a> |<a href="https://twitter.com/mijustin"> @mijustin</a> | <a href="https://medium.com/mega-maker">On Medium</a></div>
 </div>
 </body>
 </html>
