--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta property="og:description" content="the podcast for makers, DIYers, crafters, and creatives" />
 <meta property="og:url" content="http://megamaker.co/" />
 <meta property="og:site_name" content="MegaMaker" />
-<meta property="og:image" content="http://megamaker.co/img/common/megamaker-logo-3d.png" />
+<meta property="og:image" content="http://megamaker.co/img/megamakerred.png" />
 <meta property="og:locale" content="en_US" />
 <title>MegaMaker</title>
 <link rel="alternate" type="application/rss+xml" title="MegaMaker RSS" href="http://simplecast.fm/podcasts/1376/rss" />
@@ -30,6 +30,14 @@
 
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
 <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
+
+<script type="text/javascript">
+!function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","group","track","ready","alias","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="3.0.1";
+analytics.load("r5TZhqKWfpVaooawnXiNEPOzlwCXRx9P");
+analytics.page()
+}}();
+</script>
+<script src="https://app.convertkit.com/assets/CKJS4.js?v=21"></script>
 </head>
 
 <body>
