--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@ analytics.page()
 
 <body>
 <div class="main">
+	<div class="smiley">😎</div>
+	<script>
+    $('.smiley').on('click', function() {
+    $('body').toggleClass('clicked');
+    });
+    </script>
 	<article>
     <img src="img/megamakerlogo.png" alt="MegaMaker - the podcast for makers, DIYers, crafters, and creatives" class="img-responsive">
     <h2>Season 2: coming April 1st</h2>
