--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ analytics.page()
 <div class="main">
 	<div class="smiley">😎</div>
 	<script>
-    $('.smiley').on('click', function() {
-    $('body').toggleClass('clicked');
+    jQuery('.smiley').on('click', function() {
+    jQuery('body').toggleClass('clicked');
     });
     </script>
 	<article>
@@ -84,5 +84,6 @@ analytics.page()
   <div class="nav">
   <a href="http://megamaker.co/secret">Secret Society</a> | <a href="http://live.megamaker.co">Live stream</a> | <a href="http://store.megamaker.co">Store</a> |<a href="https://twitter.com/mijustin"> @mijustin</a> | <a href="https://medium.com/mega-maker">On Medium</a></div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </body>
 </html>
