--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ analytics.page()
 	<hr>
     <h2 align="center">Sponsor</h2>
     <iframe frameBorder="0" scrolling="no" src="http://sponsor.megamaker.co/?ig_embed_widget=1&product_no=4" width="214" height="366"></iframe>
+    <iframe frameBorder="0" scrolling="no" src="http://sponsor.megamaker.co/?ig_embed_widget=1&product_no=2" width="214" height="366"></iframe>
+    <iframe frameBorder="0" scrolling="no" src="http://sponsor.megamaker.co/?ig_embed_widget=1&product_no=1" width="214" height="366"></iframe>
     <hr>
     <h2 align="center">Reviews</h2>
     <p><a href="http://beta.podrover.com/r/1398371103"><img src="img/review-03.jpg" alt="Get inspired" border="0" class="img-review"></a></p>
