--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ analytics.page()
     <iframe frameBorder="0" scrolling="no" src="http://sponsor.megamaker.co/?ig_embed_widget=1&product_no=2" width="214" height="366"></iframe>
     <iframe frameBorder="0" scrolling="no" src="http://sponsor.megamaker.co/?ig_embed_widget=1&product_no=1" width="214" height="366"></iframe>
     </p>
+    <p align="center" style="font-size:0.8em;"><a href="http://sponsor.megamaker.co">See the full crowdfunding campaign here.</a></p>
   </article>
   <div class="nav">
   <a href="http://megamaker.co/secret">Secret Society</a> | <a href="http://live.megamaker.co">Live stream</a> | <a href="http://store.megamaker.co">Store</a> |<a href="https://twitter.com/mijustin"> @mijustin</a> | <a href="https://medium.com/mega-maker">On Medium</a></div>
