--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:site_name" content="MegaMaker" />
 <meta property="og:image" content="http://megamaker.co/img/megamakerred.png" />
 <meta property="og:locale" content="en_US" />
-<title>MegaMaker</title>
+<title>Maker Mob</title>
 <link rel="alternate" type="application/rss+xml" title="MegaMaker RSS" href="http://simplecast.fm/podcasts/1376/rss" />
 <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-icon-60x60.png">
@@ -29,12 +29,12 @@
 <link rel="manifest" href="/img/manifest.json">
 
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'> 
 
 <script type="text/javascript">
 !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","group","track","ready","alias","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="3.0.1";
 analytics.load("r5TZhqKWfpVaooawnXiNEPOzlwCXRx9P");
-analytics.page()
+analytics.page('makermob')
 }}();
 </script>
 <script src="https://app.convertkit.com/assets/CKJS4.js?v=21"></script>
@@ -42,57 +42,42 @@ analytics.page()
 
 <body>
 <div class="main">
-	<div class="smiley">😎</div>
 	<article>
     <img src="img/megamakerlogo.png" alt="MegaMaker - the podcast for makers, DIYers, crafters, and creatives" class="img-responsive">
-    <h2>Season 2: coming April 1st</h2>
-    <p>The show for artisans, DIYers, craftspeople, makers, and creatives.</p>
-    <p>Justin is trying to <a href="http://megamaker.co/list">make 100 things</a> in 2016. Will he do it? Each episode is a short, entertaining adventure on creating something new. You'll also hear how other makers are living a creative life while also making a living. Get motivated to make your own stuff this year!</p>
-    <div class="one">
-    <h2>Listen to the podcast</h2>
-    <p><a href="https://itunes.apple.com/us/podcast/megamaker/id1074661788">Subscribe on iTunes</a></p>
-    <p><a href="https://overcast.fm/itunes1074661788/megamaker">Listen with Overcast</a></p>
-    <p><a href="http://pca.st/kqkY">Listen with Pocket Casts</a></p>
-    <p><a href="http://megamaker.simplecast.fm/">Listen online</a></p>
-    <p><a href="http://simplecast.com/podcasts/1376/rss">Subscribe via RSS</a></p>
-    </div>
-    <div class="two">
-    <h2>Join the Maker Challenge</h2>
-    <form id="ck_subscribe_form" action="https://app.convertkit.com/landing_pages/12755/subscribe" data-remote="true">
-          <fieldset>
-            <input type="hidden" name="id" value="12755" id="landing_page_id">
-            <label for="ck_firstNameField">First Name</label>
-            <input name="first_name" id="ck_firstNameField" type="text" placeholder="First Name">
-            <label for="ck_emailField">Your Email</label>
-            <input type="email" name="email" id="ck_emailField" placeholder="Your Email">
-            <button type="submit" id="ck_subscribe_button">Sign Up</button>
-          </fieldset>
-    </form>
+    <h1 align="center">Maker Mob</h1>
+    <p>Every day I get emails from makers who have just created their first &quot;thing.&quot;</p>
+    <p>A few of these are <strong>exceptional</strong>. The maker has clearly put in a ton of time and effort into creating a <strong>high quality </strong>project. Often, these are <em>tiny products</em>. They started small, shipped it, and are looking for their first customers.</p>
+    <p><strong>The hard part is trust</strong>. People don't know them yet, so they don't trust them. To get traction, you need people to buy your thing, use it, and tell others about it (this is what builds trust). But if people don't know who you are, they're not willing to take that initial plunge.</p>
+    <h2 align="center">Here's an idea</h2>
+    <p>Have you heard of a <strong>flash mob</strong>? It's when a large group of people  suddenly show up at the same place, at the same time to perform a specific action.</p>
+    <p><strong>What if we did that, but for new makers?</strong> A bunch of us agree to show up, and help a maker with their launch.</p>
+    <p>Practically, this looks like:</p>
+    <ul>
+      <li>buying their small product</li>
+      <li>trying it out</li>
+      <li>telling people about it</li>
+      <li>provide constructive feedback</li>
+    </ul>
+<p>For most of us, spending $10 isn't a big deal. But for the <strong>maker</strong> it's a <strong>huge deal</strong>. Someone on the internet just gave them money! It gives them the confidence to keep going; it alleviates their anxiety. Plus: they get that initial traction they need.</p>
+<p>Let's do this! (<a href="smsfeedback.html">Here's what other people thought of the idea</a>)</p>
+    <div class="mob">
+    <img src="img/ichris.jpg" alt="Chris Enns">
+    <h2>Currently we're mobbing:</h2>
+    <p><strong>Name: </strong><a href="https://twitter.com/ichris">Chris Enns</a></p>
+    <p><strong>Bio: </strong>Chris helped create a small (and beloved) podcast network called Goodstuff.fm. He's been thinking about making a small product for years, and finally pushed himself to make a video course.</p>
+    <p><strong>Product:</strong> <a href="https://gumroad.com/a/123483251">Snapchat 101</a> - $7</p>
+    <p><strong>Why: </strong>Chris' little Snapchat course is the <strong>perfect </strong>example of starting small. He saw a need (old people like me are confused by Snapchat) and created a series of video tutorials that solve that pain. And he overdelivered! He created 10 videos, and 2 PDFs. Everything looks (and sounds) professional.</p>
+    <h3 align="center">Let's mob it!</h3>
+    <p align="center"><a href="https://gumroad.com/a/123483251" class="button">Mob Chris</a></p>
     </div>
     <hr>
-    <h2 align="center">Reviews</h2>
-    <p><a href="http://beta.podrover.com/r/1398371103"><img src="img/review-03.jpg" alt="Get inspired" border="0" class="img-review"></a></p>
-    <p><a href="http://beta.podrover.com/r/2531847529"><img src="img/review-01.jpg" alt="Pure inspiration" border="0" class="img-review"></a></p>
-    <p><a href="http://beta.podrover.com/r/665759879"><img src="img/review-02.jpg" alt="Recommended" border="0" class="img-review"></a></p>
-    <hr>
-    <h2 align="center">Sponsor</h2>
-    <p>You can sponsor an episode of MegaMaker as an individual (as low as $5), a tiny business ($99), or a bigger business ($499).</p>
-    <p align="center">
-    <iframe frameBorder="0" scrolling="no" src="http://sponsor.megamaker.co/?ig_embed_widget=1&product_no=4" width="214" height="366"></iframe>
-    <iframe frameBorder="0" scrolling="no" src="http://sponsor.megamaker.co/?ig_embed_widget=1&product_no=2" width="214" height="366"></iframe>
-    <iframe frameBorder="0" scrolling="no" src="http://sponsor.megamaker.co/?ig_embed_widget=1&product_no=1" width="214" height="366"></iframe>
-    </p>
-    <p align="center" style="font-size:0.8em;"><a href="http://sponsor.megamaker.co">See the full crowdfunding campaign here.</a></p>
+    <h2 align="center">Questions?</h2>
+    <p><a href="https://megamaker.simplecast.fm/episodes/35563-e020-maker-mob">Listen to the podcast episode</a> for more background.</p>
+    <p>How do you submit a product for consideration? Right now we don't have a process for that. I'm thinking we'll eventually use something like <a href="http://sponsor.megamaker.co/projects/upstarter/">Upstarter</a>.</p>
   </article>
   <div class="nav">
   <hr>
   <a href="http://megamaker.co/secret">Secret Society</a> | <a href="http://live.megamaker.co">Live stream</a> | <a href="http://store.megamaker.co">Store</a> |<a href="https://twitter.com/mijustin"> @mijustin</a> | <a href="https://medium.com/mega-maker">On Medium</a></div>
 </div>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
-<script>
-jQuery('.smiley').on('click', function() {
-jQuery('body').toggleClass('clicked');
-});
-</script>
 </body>
 </html>
