--- a/index.html
+++ b/index.html
@@ -3,81 +3,69 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="MegaMaker - the podcast for makers, DIYers, crafters, and creatives">
+<meta name="description" content="The Left Coast Collective - your source to grow as a filmmaker and hone the storytelling craft">
 <meta property="og:type" content="website" />
-<meta property="og:title" content="MegaMaker" />
-<meta property="og:description" content="the podcast for makers, DIYers, crafters, and creatives" />
-<meta property="og:url" content="http://megamaker.co/" />
-<meta property="og:site_name" content="MegaMaker" />
-<meta property="og:image" content="http://megamaker.co/img/megamakerred.png" />
+<meta property="og:title" content="The Left Coast Collective" />
+<meta property="og:description" content="your source to grow as a filmmaker and hone the storytelling craft" />
+<meta property="og:url" content="http://leftcoast.co/" />
+<meta property="og:site_name" content="Left Coast" />
+<meta property="og:image" content="http://leftcoast.co/thecollective/img/collective.jpg" />
 <meta property="og:locale" content="en_US" />
-<title>Maker Mob</title>
-<link rel="alternate" type="application/rss+xml" title="MegaMaker RSS" href="http://simplecast.fm/podcasts/1376/rss" />
-<link rel="apple-touch-icon" sizes="57x57" href="/img/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/img/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/img/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/img/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/img/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/img/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/img/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/img/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="/img/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
-<link rel="manifest" href="/img/manifest.json">
+<title>The Left Coast Collective by Levi Allen</title>
 
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'> 
+<link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Dosis:400,500,600,700,800,300' rel='stylesheet' type='text/css'>
 
-<script type="text/javascript">
-!function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","group","track","ready","alias","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="3.0.1";
-analytics.load("r5TZhqKWfpVaooawnXiNEPOzlwCXRx9P");
-analytics.page('makermob')
-}}();
-</script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-60446824-1', 'auto');
+  ga('send', 'pageview');
+</script>                    			
+
 <script src="https://app.convertkit.com/assets/CKJS4.js?v=21"></script>
 </head>
 
 <body>
 <div class="main">
-	<article>
-    <img src="img/megamakerlogo.png" alt="MegaMaker - the podcast for makers, DIYers, crafters, and creatives" class="img-responsive">
-    <h1 align="center">Maker Mob</h1>
-    <p>Every day I get emails from makers who have just created their first &quot;thing.&quot;</p>
-    <p>A few of these are <strong>exceptional</strong>. The maker has clearly put in a ton of time and effort into creating a <strong>high quality </strong>project. Often, these are <em>tiny products</em>. They started small, shipped it, and are looking for their first customers.</p>
-    <p><strong>The hard part is trust</strong>. People don't know them yet, so they don't trust them. To get traction, you need people to buy your thing, use it, and tell others about it (this is what builds trust). But if people don't know who you are, they're not willing to take that initial plunge.</p>
-    <h2 align="center">Here's an idea</h2>
-    <p>Have you heard of a <strong>flash mob</strong>? It's when a large group of people  suddenly show up at the same place, at the same time to perform a specific action.</p>
-    <p><strong>What if we did that, but for new makers?</strong> A bunch of us agree to show up, and help a maker with their launch.</p>
-    <p>Practically, this looks like:</p>
-    <ul>
-      <li>buying their small product</li>
-      <li>trying it out</li>
-      <li>telling people about it</li>
-      <li>provide constructive feedback</li>
-    </ul>
-<p>For most of us, spending $10 isn't a big deal. But for the <strong>maker</strong> it's a <strong>huge deal</strong>. Someone on the internet just gave them money! It gives them the confidence to keep going; it alleviates their anxiety. Plus: they get that initial traction they need.</p>
-<p>Let's do this! (<a href="smsfeedback.html">Here's what other people thought of the idea</a>)</p>
-    <div class="mob">
-    <img src="img/ichris.jpg" alt="Chris Enns">
-    <h2>Currently we're mobbing:</h2>
-    <p><strong>Name: </strong><a href="https://twitter.com/ichris">Chris Enns</a></p>
-    <p><strong>Bio: </strong>Chris helped create a small (and beloved) podcast network called Goodstuff.fm. He's been thinking about making a small product for years, and finally pushed himself to make a video course.</p>
-    <p><strong>Product:</strong> <a href="https://gumroad.com/a/123483251">Snapchat 101</a> - $7</p>
-    <p><strong>Why: </strong>Chris' little Snapchat course is the <strong>perfect </strong>example of starting small. He saw a need (old people like me are confused by Snapchat) and created a series of video tutorials that solve that pain. And he overdelivered! He created 10 videos, and 2 PDFs. Everything looks (and sounds) professional.</p>
-    <h3 align="center">Let's mob it!</h3>
-    <p align="center"><a href="https://gumroad.com/a/123483251" class="button">Mob Chris</a></p>
+	<article> <a href="http://www.leftcoast.co/"><img src="img/logo.png" alt="Left Coast - The Collective - Levi Allen" border="0" class="img-responsive"></a>
+    <h1 align="center">Join the collective</h1>
+    <p>The Leftcoast Collective is your source to grow as a filmmaker and hone the storytelling craft.</p>
+    <p>By joining the collective you will have direct access to everything Leftcoast and be able to <strong>ask me questions first hand.</strong> I send out new blog posts that help you grow every Thursday.</p>
+    <p>New members get my free book about my favourite tools. <strong>No strings attached, entirely free</strong>. The book is called <em>Levi Allen’s Toolbox</em> and it is my guide to all the software and plugins I use every single day.</p>
+    <p>What are you waiting for?</p>
+    <div class="cta">
+      <h2>Receive Free Tutorials &amp;  Ask Me Anything</h2>
+    <p>I really love helping people like yourself grow as filmmakers! I send out all of my latest tutorials, blog posts, and exclusive content to my newsletter <em>the Leftcoast Collective.</em> It is more than a newsletter to me,<strong> it is a group of people I trust and ask directly for input on new projects and what they want to learn.</strong></p>
+    <p>I put together a free guide of tools I would love to give you as a welcome gift! <strong>Make sure to say hello, I read every single email I get and cannot wait to hear from you.</strong></p>
+	<div class="mailchimp" id="mc_embed_signup"><form id="mc-embedded-subscribe-form" class="validate" action="//leftcoast.us10.list-manage.com/subscribe/post?u=393643f0ceaa27cba1d5966e1&amp;id=e34efe9754" method="post" name="mc-embedded-subscribe-form" novalidate="" target="_blank">
+<div id="mc_embed_signup_scroll">
+<h3><span style="color: #ffffff;">Sign up and get the Video Tools PDF!</span></h3>
+<div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+</label>
+<input id="mce-EMAIL" class="required email" name="EMAIL" type="email" value=""></div>
+<div id="mce-responses" class="clear"></div>
+<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+<div style="position: absolute; left: -5000px;"><input tabindex="-1" name="b_393643f0ceaa27cba1d5966e1_e34efe9754" type="text" value=""></div>
+<div class="clear"><input id="mc-embedded-subscribe" class="button" name="subscribe" type="submit" value="Subscribe"></div>
+</div>
+</form></div>
     </div>
+    <div class="who">
     <hr>
-    <h2 align="center">Questions?</h2>
-    <p><a href="https://megamaker.simplecast.fm/episodes/35563-e020-maker-mob">Listen to the podcast episode</a> for more background.</p>
-    <p>How do you submit a product for consideration? Right now we don't have a process for that. I'm thinking we'll eventually use something like <a href="http://sponsor.megamaker.co/projects/upstarter/">Upstarter</a>.</p>
+    <h2 align="center">Who am I?</h2>
+    <img src="img/levi.png" alt="Levi Allen">
+    <p>Hi! I'm Levi Allen.  I am an adventure filmmaker living in Vancouver British Columbia.</p>
+    <p>Essentially I’m just an <strong>ordinary person</strong> pursuing <strong>extraordinary results</strong> and I want to help <strong>you do the same.</strong> I’ve created the Leftcoast Collective as your source to grow as a filmmaker and hone the storytelling craft.</p>
+    </div>
   </article>
   <div class="nav">
   <hr>
-  <a href="http://megamaker.co/secret">Secret Society</a> | <a href="http://live.megamaker.co">Live stream</a> | <a href="http://store.megamaker.co">Store</a> |<a href="https://twitter.com/mijustin"> @mijustin</a> | <a href="https://medium.com/mega-maker">On Medium</a></div>
+  <a href="http://www.leftcoast.co/about/">About</a> | <a href="http://www.leftcoast.co/contact/">Contact</a> | <a href="http://www.leftcoast.co/instagram/">Instagram</a></div>
 </div>
 </body>
 </html>
