New generic landing page

--- a/index.html
+++ b/index.html
@@ -3,69 +3,48 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="The Left Coast Collective - your source to grow as a filmmaker and hone the storytelling craft">
-<meta property="og:type" content="website" />
-<meta property="og:title" content="The Left Coast Collective" />
-<meta property="og:description" content="your source to grow as a filmmaker and hone the storytelling craft" />
-<meta property="og:url" content="http://leftcoast.co/" />
-<meta property="og:site_name" content="Left Coast" />
-<meta property="og:image" content="http://leftcoast.co/thecollective/img/collective.jpg" />
-<meta property="og:locale" content="en_US" />
-<title>The Left Coast Collective by Levi Allen</title>
+<title>Sample landing page</title>
 
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-<link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic,700' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Dosis:400,500,600,700,800,300' rel='stylesheet' type='text/css'>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-60446824-1', 'auto');
-  ga('send', 'pageview');
-</script>                    			
-
-<script src="https://app.convertkit.com/assets/CKJS4.js?v=21"></script>
+<link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 <div class="main">
-	<article> <a href="http://www.leftcoast.co/"><img src="img/logo.png" alt="Left Coast - The Collective - Levi Allen" border="0" class="img-responsive"></a>
-    <h1 align="center">Join the collective</h1>
-    <p>The Leftcoast Collective is your source to grow as a filmmaker and hone the storytelling craft.</p>
-    <p>By joining the collective you will have direct access to everything Leftcoast and be able to <strong>ask me questions first hand.</strong> I send out new blog posts that help you grow every Thursday.</p>
-    <p>New members get my free book about my favourite tools. <strong>No strings attached, entirely free</strong>. The book is called <em>Levi Allen’s Toolbox</em> and it is my guide to all the software and plugins I use every single day.</p>
-    <p>What are you waiting for?</p>
+	<article><img src="img/logo.png" style="width:30%;" alt="Build your own product business" border="0" class="img-responsive">
+    <h1 align="center">&quot;My biggest pain was this&quot;</h1>
+    <h2 align="center">Here's better way for [group] to [get this outcome].</h2>
+    <p> You're [this type of person] who is trying to achieve [this dream].</p>
+    <p>It works! Here's a testimonial:</p>
+    <blockquote>"This email course is amazing. It helped me succeed!"<footer>- <cite>This person</cite></footer></blockquote>
     <div class="cta">
-      <h2>Receive Free Tutorials &amp;  Ask Me Anything</h2>
-    <p>I really love helping people like yourself grow as filmmakers! I send out all of my latest tutorials, blog posts, and exclusive content to my newsletter <em>the Leftcoast Collective.</em> It is more than a newsletter to me,<strong> it is a group of people I trust and ask directly for input on new projects and what they want to learn.</strong></p>
-    <p>I put together a free guide of tools I would love to give you as a welcome gift! <strong>Make sure to say hello, I read every single email I get and cannot wait to hear from you.</strong></p>
-	<div class="mailchimp" id="mc_embed_signup"><form id="mc-embedded-subscribe-form" class="validate" action="//leftcoast.us10.list-manage.com/subscribe/post?u=393643f0ceaa27cba1d5966e1&amp;id=e34efe9754" method="post" name="mc-embedded-subscribe-form" novalidate="" target="_blank">
-<div id="mc_embed_signup_scroll">
-<h3><span style="color: #ffffff;">Sign up and get the Video Tools PDF!</span></h3>
-<div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
-</label>
-<input id="mce-EMAIL" class="required email" name="EMAIL" type="email" value=""></div>
-<div id="mce-responses" class="clear"></div>
-<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-<div style="position: absolute; left: -5000px;"><input tabindex="-1" name="b_393643f0ceaa27cba1d5966e1_e34efe9754" type="text" value=""></div>
-<div class="clear"><input id="mc-embedded-subscribe" class="button" name="subscribe" type="submit" value="Subscribe"></div>
-</div>
-</form></div>
+      <h2>Learn to [do this] in 5 steps</h2>
+    <p>This 5 week email course gives you the knowledge you need to [accomplish this.]<strong></strong></p>
+	<form id="#" action="#" data-remote="true">
+          <fieldset>
+            <input type="hidden" name="id" value="#" id="landing_page_id">
+            <label for="ck_firstNameField">First Name</label>
+            <input name="first_name" id="ck_firstNameField" type="text" placeholder="First Name">
+            <label for="ck_emailField">Your Email</label>
+            <input type="email" name="email" id="ck_emailField" placeholder="Your Email">
+            <input type="submit" id="ck_subscribe_button"></input>
+          </fieldset>
+    </form>
     </div>
     <div class="who">
     <hr>
     <h2 align="center">Who am I?</h2>
     <img src="img/levi.png" alt="Levi Allen">
-    <p>Hi! I'm Levi Allen.  I am an adventure filmmaker living in Vancouver British Columbia.</p>
-    <p>Essentially I’m just an <strong>ordinary person</strong> pursuing <strong>extraordinary results</strong> and I want to help <strong>you do the same.</strong> I’ve created the Leftcoast Collective as your source to grow as a filmmaker and hone the storytelling craft.</p>
+    <p>Hi! I'm [this person]. </p>
+    <p>Here's a few things I've done, and a few places I've worked. (Basically: why should you trust me?)</p>
+    <p>Check out my work on @twitter, etc...</p>
+    <blockquote>"This person is awesome. Seriously."<footer>- <cite>Huge fan</cite></footer></blockquote>
+    <p>I live [here], and do [this] for fun. (I'm not a robot, I promise!)</p>
     </div>
   </article>
   <div class="nav">
   <hr>
-  <a href="http://www.leftcoast.co/about/">About</a> | <a href="http://www.leftcoast.co/contact/">Contact</a> | <a href="http://www.leftcoast.co/instagram/">Instagram</a></div>
+  <p align="center"><a href="#">About</a> | <a href="#">Contact</a> | <a href="#">Twitter</a></p></div>
 </div>
 </body>
 </html>
