--- a/index.html
+++ b/index.html
@@ -1,50 +1,62 @@
+<!--
+   __     ______     __         ______  
+  /\ \   /\  __ \   /\ \       /\__  _\ 
+ _\_\ \  \ \ \/\ \  \ \ \____  \/_/\ \/ 
+/\_____\  \ \_____\  \ \_____\    \ \_\ 
+\/_____/   \/_____/   \/_____/     \/_/ 
+                                        
+https://justinjackson.ca/jolt                                        
+-->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sample landing page</title>
-
+<title>Awesome Landing Page - by Jolt</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
 <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 </head>
 
 <body>
 <div class="main">
-	<article><img src="img/logo.png" style="width:30%;" alt="Build your own product business" border="0" class="img-responsive">
-    <h1 align="center">&quot;My biggest pain was this&quot;</h1>
-    <h2 align="center">Here's better way for [group] to [get this outcome].</h2>
-    <p> You're [this type of person] who is trying to achieve [this dream].</p>
+  <article>
+  	<img src="img/logo.png" style="width:30%;" alt="Build your own product business" border="0" class="img-responsive">
+  	<h1 align="center">"My biggest pain was this"</h1>
+    <h2 align="center" style="font-weight:400;"><em>Here's better way for [group] to [get this outcome].</em></h2>
+    <p align="center"><em>Coming July 2016</em></p>
+    <p>You're [this type of person] who is trying to achieve [this dream].</p>
+    <p><strong>Here's our solution. Here's how we make you more awesome.</strong></p>
     <p>It works! Here's a testimonial:</p>
-    <blockquote>"This email course is amazing. It helped me succeed!"<footer>- <cite>This person</cite></footer></blockquote>
-    <div class="cta">
-      <h2>Learn to [do this] in 5 steps</h2>
-    <p>This 5 week email course gives you the knowledge you need to [accomplish this.]<strong></strong></p>
-	<form id="#" action="#" data-remote="true">
-          <fieldset>
-            <input type="hidden" name="id" value="#" id="landing_page_id">
-            <label for="ck_firstNameField">First Name</label>
-            <input name="first_name" id="ck_firstNameField" type="text" placeholder="First Name">
-            <label for="ck_emailField">Your Email</label>
-            <input type="email" name="email" id="ck_emailField" placeholder="Your Email">
-            <input type="submit" id="ck_subscribe_button"></input>
-          </fieldset>
-    </form>
-    </div>
+    <blockquote>"This email course is amazing. It helped me succeed!"- This person</blockquote>
+    <p>Try us out! You'll love it.</p>
+    <!-- This is my subscription form here. If you're using MailChimp, go to your list settings and choose "Embed Form." Delete my code, and put yours in. -->
+      <script async id="_ck_59008" src="https://forms.convertkit.com/59008?v=5"></script>
+	<!-- the code you need to delete + replace is above this line -->
     <div class="who">
     <hr>
     <h2 align="center">Who am I?</h2>
-    <img src="img/levi.png" alt="Levi Allen">
-    <p>Hi! I'm [this person]. </p>
+    <img src="img/levi.png" alt="Your photo">
+    <p>Hi! I'm [this person].</p>
     <p>Here's a few things I've done, and a few places I've worked. (Basically: why should you trust me?)</p>
     <p>Check out my work on @twitter, etc...</p>
-    <blockquote>"This person is awesome. Seriously."<footer>- <cite>Huge fan</cite></footer></blockquote>
+    <blockquote>"This person is awesome. Seriously."- Huge fan</blockquote>
     <p>I live [here], and do [this] for fun. (I'm not a robot, I promise!)</p>
     </div>
+    <hr>
+    <h2 align="center">Have questions?</h2>
+    <p align="center"><strong>Email:</strong> your@email.com</p>
+    <p align="center"><strong>Twitter: </strong>@yourtwitter</p>
   </article>
-  <div class="nav">
-  <hr>
-  <p align="center"><a href="#">About</a> | <a href="#">Contact</a> | <a href="#">Twitter</a></p></div>
 </div>
 </body>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'PUT YOUR ANALYTICS CODE HERE', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </html>
